methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:5: error: ';' expected but 'return' found.
    }return false
     ^