methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean ={
    if(getCouleurSol()==Color.green){
      return true
  	}return false
}